Tweak Docker JVM flags for production